// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Pruebas en <SearchPage /> debe de mostrar resultados y el input con el valor del queryString 1`] = `
<div>
  <h1>
    Search Page
  </h1>
  <hr />
  <div
    className="row "
  >
    <div
      className="col-5"
    >
      <h4>
        Search Form
        <hr />
        <form
          className="search-form"
          onSubmit={[Function]}
        >
          <input
            autoComplete="off"
            className="form-control col-8"
            name="search"
            onChange={[Function]}
            placeholder="Find your hero..."
            type="text"
            value="superman"
          />
          <button
            className="btn btn-outline-primary"
            type="submit"
          >
            Search
          </button>
        </form>
      </h4>
    </div>
    <div
      className="col-7"
    >
      <h4>
        Results
      </h4>
      <hr />
      <div
        className="card"
      >
        <div
          className="row no-gutters"
        >
          <div
            className="col-md-4"
          >
            <img
              alt="Superman"
              className="card-img"
            />
          </div>
          <div
            className="col-md-8"
          >
            <div
              className="card-body"
            >
              <div
                className="card-title"
              >
                Superman
              </div>
              <p
                className="card-text"
              >
                Kal-El
              </p>
              <p
                className="card-text"
              >
                Action Comics #1
              </p>
              <a
                href="/hero/dc-superman"
                onClick={[Function]}
              >
                Más detalles...
              </a>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Pruebas en <SearchPage /> debe de mostrarse correctamente sin query params 1`] = `
<div>
  <h1>
    Search Page
  </h1>
  <hr />
  <div
    className="row "
  >
    <div
      className="col-5"
    >
      <h4>
        Search Form
        <hr />
        <form
          className="search-form"
          onSubmit={[Function]}
        >
          <input
            autoComplete="off"
            className="form-control col-8"
            name="search"
            onChange={[Function]}
            placeholder="Find your hero..."
            type="text"
            value=""
          />
          <button
            className="btn btn-outline-primary"
            type="submit"
          >
            Search
          </button>
        </form>
      </h4>
    </div>
    <div
      className="col-7"
    >
      <h4>
        Results
      </h4>
      <hr />
      <div
        className="alert alert-info text-center"
      >
        No results...
      </div>
    </div>
  </div>
</div>
`;
